--- a/ToDoList/index.html
+++ b/ToDoList/index.html
@@ -15,11 +15,11 @@
             <input type="button" class ="btn" value="Add Item">
         </div>
         <div>
-            <ul class ='items' >
+            <ul class ='items' type="circle">
 
             </ul>
         </div>
     </div>
-    
+    <script src="index.js"></script>
 </body>
 </html>
